Adding multiple denoising tasks experimental visualization notebook

--- a/notebooks/multiple_denoising_tasks.ipynb
+++ b/notebooks/multiple_denoising_tasks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,19 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'none': <torch.utils.data.dataloader.DataLoader at 0x7fb5a64f5950>,\n",
-       " 'salt_and_pepper': <torch.utils.data.dataloader.DataLoader at 0x7fb5a74fc850>,\n",
-       " 'gaussian': <torch.utils.data.dataloader.DataLoader at 0x7fb5a7f9d410>,\n",
-       " 'speckle': <torch.utils.data.dataloader.DataLoader at 0x7fb5a7cc98d0>}"
+       "{'none': <torch.utils.data.dataloader.DataLoader at 0x7eff00702450>,\n",
+       " 'salt_and_pepper': <torch.utils.data.dataloader.DataLoader at 0x7efe75afa490>,\n",
+       " 'gaussian': <torch.utils.data.dataloader.DataLoader at 0x7efefc503450>,\n",
+       " 'speckle': <torch.utils.data.dataloader.DataLoader at 0x7efe75afa650>}"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,14 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['none_seed_8',\n",
+       "['big_moreepochs_none_gau_snp_seed_2568',\n",
+       " 'none_seed_8',\n",
        " 'noises_none_seed_2568_seed_2568',\n",
+       " 'big_moreepochs_gau_seed_2567',\n",
        " 'gaussian_seed_2567',\n",
        " 'small_gau_seed2568_seed_2568',\n",
        " 'small_gau_snp_seed2568_seed_2568',\n",
@@ -97,6 +99,8 @@
        " 'noises_gau_seed2568_seed_2568',\n",
        " 'temp',\n",
        " 'small_gau_snp_seed2567_seed_2567',\n",
+       " 'big_gau_seed_2568',\n",
+       " 'big_moreepochs_gau_seed_2568',\n",
        " 'noises_gau_seed2567_seed_2567',\n",
        " 'noises_sa_ga_sp_seed7_seed_7',\n",
        " 'small_snp_seed2567_seed_2567',\n",
@@ -104,13 +108,22 @@
        " 'speckle_seed_7',\n",
        " 'none_seed_2568',\n",
        " 'none_seed_2567',\n",
+       " 'big_moreepochs_snp_seed_2568',\n",
+       " 'big_snp_seed_2567',\n",
        " 'gaussian_seed_7',\n",
        " 'noises_snp_seed2568_seed_2568',\n",
        " 'gaussian_seed_8',\n",
        " 'test_mnist_seed_7',\n",
        " 'noises_snp_seed2567_seed_2567',\n",
+       " 'big_none_gau_snp_seed_2568',\n",
        " 'salt_and_pepper_seed_2568',\n",
+       " 'big_gau_snp_seed_2567',\n",
+       " 'big_none_seed_2567',\n",
+       " 'big_gau_snp_seed_2568',\n",
        " 'noises_none_gau_snp_seed2567_seed_2567',\n",
+       " 'big_moreepochs_gau_snp_seed_2568',\n",
+       " 'big_none_gau_snp_seed_2567',\n",
+       " 'big_moreepochs_none_seed_2567',\n",
        " 'small_none_gau_snp_seed2567_seed_2567',\n",
        " 'noises_none_seed_2567',\n",
        " 'salt_and_pepper_seed_8',\n",
@@ -118,19 +131,26 @@
        " 'small_none_seed_2567',\n",
        " 'salt_and_pepper_seed_2567',\n",
        " 'speckle_seed_8',\n",
+       " 'big_moreepochs_gau_snp_seed_2567',\n",
        " 'test_mnist_7',\n",
+       " 'big_none_seed_2568',\n",
        " 'none_seed_7',\n",
        " 'small_gau_seed2567_seed_2567',\n",
        " 'speckle_seed_2567',\n",
        " 'noises_gau_snp_seed2568_seed_2568',\n",
+       " 'big_gau_seed_2567',\n",
+       " 'big_snp_seed_2568',\n",
        " 'small_none_gau_snp_seed2568_seed_2568',\n",
+       " 'interpolation_results',\n",
        " 'small_snp_seed2568_seed_2568',\n",
        " 'test_mnist_shuffledtest_seed_7',\n",
        " 'gaussian_seed_2568',\n",
-       " 'small_none_seed_2568_seed_2568']"
+       " 'big_moreepochs_none_seed_2568',\n",
+       " 'small_none_seed_2568_seed_2568',\n",
+       " 'big_moreepochs_snp_seed_2567']"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
